# FindMinMax

FindMinMax/: CMakeLists.txt
FindMinMax/src/main/algorithms/: BruteForceAlgorithm.cpp  BruteForceAlgorithm.h  DivideAndConquerAlgorithm.cpp  DivideAndConquerAlgorithm.h  MinMaxFinderAlgorithm.h
FindMinMax/src/test/: BruteForceAlgorithmTest.cpp  CMakeLists.txt  DivideAndConquerAlgorithmTest.cpp
